Implement LLM and Vision Processing Services with MLX Integration
- Added LLMProcessor for handling text generation and scene understanding using MLX Gemma.
- Introduced ModelManager to manage loading and processing of MLX-based vision and language models.
- Created VisionProcessor for analyzing frames with iOS detections and integrating MLX vision analysis.
- Developed WebSocketManager for managing WebSocket connections with iOS clients.
- Established utility functions for logging and configuration management.
- Implemented a startup script for setting up the environment, installing dependencies, and launching the server.
- Added error handling and logging throughout the services for better debugging and monitoring.

--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,135 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Virtual Environment
+venv/
+env/
+ENV/
+.env
 
-# testing
-/coverage
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+.history/
 
-# next.js
-/.next/
-/out/
+# IDE - PyCharm
+.idea/
+*.iml
+*.iws
+.idea_modules/
 
-# production
-/build
+# Logs and databases
+*.log
+*.sqlite
+logs/
+*.db
 
-# misc
+# OS generated files
 .DS_Store
-*.pem
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# debug
+# Project specific
+server/weights/
+weights/
+server/logs/
+server/temp/
+*.pt
+*.onnx
+*.mlmodel
+
+# Test coverage
+.coverage
+htmlcov/
+.tox/
+.nox/
+.coverage.*
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# Node
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+.pnp/
+.pnp.js
 
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
+# React/Next.js
+.next/
+out/
+web/build/
 .vercel
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# iOS
+## User settings
+xcuserdata/
+*.xcscmblueprint
+*.xccheckout
+
+## Obj-C/Swift specific
+*.hmap
+*.ipa
+*.dSYM.zip
+*.dSYM
+
+## Playgrounds
+timeline.xctimeline
+playground.xcworkspace
+
+# Swift Package Manager
+.build/
+Packages/
+Package.resolved
+.swiftpm
+
+# CocoaPods
+Pods/
+*.xcworkspace
+
+# Temporary files
+*.swp
+*.swo
+*~
+
+# Local development
+docker-compose.override.yml
