vastly changed and completely redesigned new server architecture and setup

--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ share/python-wheels/
 MANIFEST
 
 # mobile(moved to riddhimanrana/orion-mobile)
-mobile/
+# mobile/
 
 # Virtual Environment
 venv/
