--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,15 +1,15 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-websockets==12.0
-pydantic>=2.5.0
-numpy>=1.26.0
-mlx>=0.26.0
-mlx-lm>=0.25.2
-requests>=2.31.0
-pillow==10.1.0
-python-dotenv==1.0.0
-rich==13.7.0
-python-json-logger==2.0.7
+fastapi
+uvicorn[standard]
+websockets
+pydantic
+numpy
+mlx
+mlx-lm
+requests
+pillow
+python-dotenv
+rich
+python-json-logger
 huggingface-hub
 structlog
 coremltools
