Simplify data flow and remove unused fields
This commit refactors the data flow between client/server components and
removes redundant confidence tracking and unused fields. Key changes:

- Remove unused confidence fields from VLM and LLM processing
- Simplify image data and detection passing through WebSocket
- Clean up scene analysis and historical context rendering
- Add authorization support and queue item details modal
- Update debug logs and error handling
- Remove deprecated views and unused components

--- a/.gitignore
+++ b/.gitignore
@@ -275,3 +275,6 @@ iOSInjectionProject/
 !*.xcworkspace/contents.xcworkspacedata
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
+
+#github
+.github/
