feat: Implement H.264 video encoding and keyframe management
- Added H264Encoder class for handling H.264 video encoding using VideoToolbox.
- Introduced KeyframePipeline to manage capturing, encoding, and sending keyframes.
- Created KeyframeVideoCapturer to feed encoded keyframes into the WebRTC pipeline.
- Developed APIService for communication with the Orion web API, including fetching WebRTC tokens.
- Implemented SignalingClient for managing WebSocket connections to the signaling server.
- Established WebRTCManager to manage peer-to-peer connections, data channels, and media streams.
- Set up a signaling server with JWT authentication and room management for WebRTC connections.
- Added health check endpoint for signaling server and integrated status indicator in the UI.

--- a/website/.env.example
+++ b/website/.env.example
@@ -3,3 +3,10 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=[your_supabase_anon_key]
 SUPABASE_SERVICE_ROLE_KEY=[your_supabase_service_role_key]
 
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+# URL for the P2P signaling server
+NEXT_PUBLIC_P2P_SIGNAL_URL=ws://localhost:3001
+
+# Secret for signing P2P signaling JWTs. Use a secure random string.
+P2P_SIGNAL_JWT_SECRET=a-very-secure-secret-for-webrtc-signaling
+P2P_SIGNAL_PORT=3001
