Refactor WebSocketManager integration and cleanup logic; update ContentView to use environment object; enhance system status API and UI components; remove deprecated SettingsView; improve loading experience with new LoadingView; update device pairing and settings terminology.

--- a/website/package.json
+++ b/website/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "dev:signal": "bun run lib/server/p2p-signal-server.ts"
+    "dev:signal": "bun run lib/server/p2p-signal-server.ts",
+    "test:status": "node scripts/test-system-status.mjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
